# chunkloader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: chunkloader.rb
debian/: changelog  control  copyright  rules
scripts/: build-deb.sh
src/: chunks.rs  download.rs  esm.rs  flutter.rs  main.rs  scan.rs  sourcemaps.rs  ui.rs
