[package]
name = "chunkloader"
version = "0.1.0"
edition = "2021"
description = "Dump webpack / Next.js JS chunks from a site into a local folder for analysis (Rust port of the Chunk Loader browser extension)"

[[bin]]
name = "chunkloader"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli"] }
regex = "1"
url = "2"
serde_json = "1"
rayon = "1"
boa_engine = "0.20"

[profile.release]
opt-level = 2
